@@ -1,3 +1,5 @@
+20100402
+	add new option OPTflags to libtk for later use
 20100325
 	more swizzling of libtk for later use. revised radio and check buttons.
 20100322
